--- a/src/model_1_train.ipynb
+++ b/src/model_1_train.ipynb
@@ -11,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,7 +19,9 @@
     "- find the lowest parametered model, smallest possible model, maintaining the structure.\n",
     "### results \n",
     "- train Accuracy: 98.66\n",
-    "- test Accuracy: 98.25"
+    "- test Accuracy: 98.25\n",
+    "### analysis\n",
+    "- Model is slightly overfitting, that's because enough dropout layers are not added, train accuracy is not crossing 99%, as I have not taken in consideration the receptive field."
    ]
   },
   {
