--- a/src/model_3_train.ipynb
+++ b/src/model_3_train.ipynb
@@ -11,14 +11,33 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### target \n",
-    "- find the lowest parametered model, smallest possible model, maintaining the structure.\n",
-    "### results \n",
-    "- train Accuracy: 98.66\n",
-    "- test Accuracy: 98.25"
+    "- Step 1 \n",
+    "    -   Increase receptive field to atleast 28. \n",
+    "- Analysis\n",
+    "    - there was only 1 pooling layer in model_2. I decided to add 1 more transition layer to increase my jump factor. \n",
+    "    - Also I wanted to increaase layers towards the output layer. Because number of end features are more compared to edges and gradients. And this will significantly improve the receptive field. \n",
+    "    - It increased both the train and test accuracy, but heavily underfitting.\n",
+    "\n",
+    "\n",
+    "- Step 2\n",
+    "    - Adjust dropout probablity to prevent overfitting or underfitting\n",
+    "- Analysis \n",
+    "    - I reduced the dropout probablity to 0.02 to make the model overfit, because in the next step I will make the training harder, so it will get adjusted.\n",
+    "    - Model was heavily overfitting.\n",
+    "\n",
+    "\n",
+    "- Step 3\n",
+    "    - Perform augmentation and scheduling to reach the goal\n",
+    "- Results \n",
+    "    - train Accuracy: 99.27\n",
+    "    - test Accuracy: 99.32 \n",
+    "- Analysis\n",
+    "    - Image augmentation made the training harder, so it was unable to reach 99.4 target. "
    ]
   },
   {
